2001-06-18  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (ms): New index.
	(Macro Index): Rename as...
	(Autoconf Macro Index): this.
	(M4 Macro Index): New appendix.
	(Programming in M4): New chapter.
	Define M4sugar, M4sh, m4_pattern_forbid, and m4_pattern_allow.
	(Quoting): Rename as...
	(M$ Quotation): this.
	Be part of `Programming in M4).

2001-06-18  Nicolas Joly  <njoly@pasteur.fr>

	* tests/torture.at (AC_ARG_VAR): Set variables and export them
	in separate statements for compatibility with Tru64 v5.1.

2001-06-17  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_ARG_VAR_VALIDATE): Be sure to cache the
	current values of the precious variables, not the previously
	cached values.
	Pass precious variables which are set to config.status.
	* doc/autoconf.texi (Setting Output Variables): Document AC_ARG_VAR.
	* tests/torture.at (AC_ARG_VAR): New.

2001-06-15  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi: Move AC_FUNC_WAIT3 and
	AC_SYS_RESTARTABLE_SYSCALLS to the obsolete section,
	and explain why and how to replace them.
	* acfunctions.m4 (AC_FUNC_WAIT3): Warn as obsolete.
	* acspecific.m4 (AC_SYS_RESTARTABLE_SYSCALLS): Likewise.

2001-06-15  Akim Demaille  <akim@epita.fr>

	`build_alias' and so on are not AC_SUBST'd.
	Reported by Bruno Haible.

	* acgeneral.m4 (AC_ARG_VAR): Move the AC_SUBST, from here...
	 (_AC_ARG_VAR_PRECIOUS): to here.

2001-06-15  Pavel Roskin  <proski@gnu.org>

	* acheaders.m4 (_AC_CHECK_HEADER_DIRENT): Instead of defining
	an unused pointer use cast to this type and `if' statement to
	avoid warnings from the compiler.
	(AC_HEADER_TIME): Likewise.
	* actypes.m4 (AC_CHECK_MEMBER): s/foo/ac_aggr/. Use the member
	in `if' statement to avoid warnings from the compiler. Declare
	ac_aggr static to avoid the need to initialize it.

2001-06-14  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Portable Shell): Move after `Writing Macros'.

2001-06-13  Akim Demaille  <akim@epita.fr>
